tipo de letras ANDRES

--- a/app/src/main/res/layout/fragment_clasificacion.xml
+++ b/app/src/main/res/layout/fragment_clasificacion.xml
@@ -21,11 +21,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorOnPrimary"
-        android:fontFamily="@font/titulos"
+        android:fontFamily="@font/hurmegeometricsans4"
         android:gravity="center"
         android:paddingTop="20dp"
         android:paddingBottom="47dp"
-        android:text="CLasificación"
+        android:text="Calificaciónes"
 
         android:textColor="@android:color/white"
         android:textSize="40sp"
