Cambios en el diseño de las vistas Alex

--- a/app/src/main/res/layout/activity_nuevo_evento.xml
+++ b/app/src/main/res/layout/activity_nuevo_evento.xml
@@ -52,7 +52,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
-                    android:text="Nuevo Evento"
+                    android:text="PQRS"
                     android:textColor="@color/white"
                     android:textSize="18dp"
                     android:textStyle="bold"
@@ -88,7 +88,7 @@
                             android:layout_marginStart="30dp"
                             android:layout_marginTop="20dp"
                             android:fontFamily="@font/hurmebold"
-                            android:text="Nombre Torneo"
+                            android:text="Detalle"
                             android:textSize="16dp"
                             app:layout_constraintBottom_toTopOf="@id/CardNombreTorneo"
                             app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
                                     android:layout_marginEnd="20dp"
                                     android:layout_marginTop="10dp"
                                     android:layout_marginBottom="10dp"
-                                    android:hint="Ingrese Nombre del torneo"
+                                    android:hint="Escriba"
                                     android:maxLength="50"/>
 
                                 <TextView
@@ -277,7 +277,7 @@
                             android:id="@+id/tvPrecioDescripcion"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Precio y Descripción"
+                            android:text="Descripción"
                             android:textSize="16dp"
                             android:fontFamily="@font/hurmebold"
                             android:layout_marginTop="20dp"
@@ -307,8 +307,8 @@
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
                                 style="@style/EditTextWhiteBackground"
-                                android:hint="Añadir Precio (máximo 999)"
-                                android:drawableEnd="@drawable/euro_24"
+                                android:hint="Descripcion Completa"
+
                                 android:maxLength="3"
                                 android:inputType="number"
                                 android:layout_marginStart="20dp"
@@ -331,7 +331,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 style="@style/EditTextWhiteBackground"
-                                android:hint="Añadir Descripción (opcional)"
+                                android:hint="Datos para tener en cuenta"
                                 android:layout_marginStart="20dp"
                                 android:layout_marginTop="10dp"
                                 android:layout_marginEnd="20dp"
@@ -357,7 +357,7 @@
                             android:id="@+id/tvTituloImagen"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Cartel Torneo"
+                            android:text="Nombre (Opcional)"
                             android:textSize="16dp"
                             android:fontFamily="@font/hurmebold"
                             android:layout_marginTop="20dp"
