cambios en las carpetas, salen errores por que no esta organizado

--- a/app/src/main/res/layout/activity_detail_event.xml
+++ b/app/src/main/res/layout/activity_detail_event.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/fondoEventos"
-    tools:context=".ui.menu.Inicio.DetailEvent">
+    tools:context=".ui.model.Inicio.DetailEvent">
 
     <ScrollView
         android:layout_width="match_parent"
