--- a/app/src/main/res/layout/activity_configuracion.xml
+++ b/app/src/main/res/layout/activity_configuracion.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorOnPrimary"
-    tools:context=".ui.menu.Inicio.DetailEvent">
+    tools:context=".ui.model.Inicio.DetailEvent">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
