--- a/app/src/main/res/layout/fragment_clasificacion.xml
+++ b/app/src/main/res/layout/fragment_clasificacion.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.menu.ClasificacionFragment">
+    tools:context=".ui.model.ClasificacionFragment">
 
     <ProgressBar
         android:id="@+id/ProgresBarClasi"
