--- a/app/src/main/res/layout/fragment_jugadores.xml
+++ b/app/src/main/res/layout/fragment_jugadores.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorSurfaceVariant"
-    tools:context=".ui.menu.Jugadores.JugadoresFragment">
+    tools:context=".ui.model.Users.userssFragment">
 
     <ProgressBar
         android:id="@+id/ProgresBar"
