--- a/app/src/main/res/layout/fragment_novedades.xml
+++ b/app/src/main/res/layout/fragment_novedades.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="?attr/colorSurfaceVariant"
-    tools:context=".ui.menu.Inicio.NovedadesFragment">
+    tools:context=".ui.model.Inicio.NovedadesFragment">
 
     <TextView
         android:id="@+id/noticias"
