--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/customColorValue"
-    tools:context=".ui.menu.Perfil.PerfilFragment">
+    tools:context=".ui.model.Perfil.PerfilFragment">
 
     <ScrollView
         android:layout_width="match_parent"
