--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgroundnewuser"
-    tools:context=".login.ResetPassword">
+    tools:context=".ui.model.login.ResetPassword">
 
     <ScrollView
         android:layout_width="match_parent"
