--- a/app/src/main/res/layout/activity_add_player_and_tournament.xml
+++ b/app/src/main/res/layout/activity_add_player_and_tournament.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.model.Perfil.AddPlayerAndTournament"
+    tools:context=".ui.Perfil.AddPlayerAndTournament"
     android:background="@drawable/top_background">
 
     <ScrollView
