--- a/app/src/main/res/layout/activity_detail_jugador.xml
+++ b/app/src/main/res/layout/activity_detail_jugador.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     style="@style/fondoEventos"
-    tools:context=".ui.model.Users.DetailJugador">
+    tools:context=".ui.Users.DetailJugador">
 
     <ScrollView
         android:layout_width="match_parent"
