--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -103,7 +103,7 @@
                         android:layout_height="wrap_content"
                         android:background="?attr/selectableItemBackground"
                         android:contentDescription="Mostrar/Ocultar contraseña"
-                        app:srcCompat="@drawable/outline_visibility_24"
+                        android:src="@drawable/outline_visibility_24"
                         app:layout_constraintTop_toBottomOf="@id/editTextPassword"
                         app:layout_constraintEnd_toEndOf="parent" />
                 </LinearLayout>
