--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,13 +89,16 @@
 
                     <EditText
                         android:id="@+id/editTextPassword"
-                        android:layout_width="275dp"
+                        android:layout_width="3dp"
                         android:layout_height="30dp"
                         android:background="@drawable/editext_background"
                         android:drawableStart="@drawable/lock_24"
                         android:drawablePadding="20dp"
                         android:ems="10"
-                        android:inputType="textPassword" />
+                        android:inputType="textPassword"
+                        app:layout_constraintEnd_toStartOf="@+id/btnShowPassword"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageButton
                         android:id="@+id/btnShowPassword"
@@ -104,7 +107,7 @@
                         android:background="?attr/selectableItemBackground"
                         android:contentDescription="Mostrar/Ocultar contraseña"
                         android:src="@drawable/outline_visibility_24"
-                        app:layout_constraintTop_toBottomOf="@id/editTextPassword"
+                        app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent" />
                 </LinearLayout>
 
@@ -188,4 +191,5 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
