--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -104,11 +104,12 @@
                         android:id="@+id/btnShowPassword"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:background="?attr/selectableItemBackground"
+                        app:srcCompat="@drawable/outline_visibility_24"
                         android:contentDescription="Mostrar/Ocultar contraseña"
-                        android:src="@drawable/outline_visibility_24"
+                        android:layout_marginTop="10dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintEnd_toEndOf="parent" />
+
                 </LinearLayout>
 
                 <TextView
@@ -133,15 +134,6 @@
                     app:layout_constraintStart_toStartOf="@id/linearLayoutPasswordLogin"
                     app:layout_constraintTop_toBottomOf="@id/tvResetPassword">
 
-                    <Button
-                        android:id="@+id/buttonGoogle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/blue"
-                        android:drawableEnd="@mipmap/google"
-                        android:gravity="center"
-                        android:text="Google"
-                        android:textColor="@color/white" />
 
                     <Button
                         android:id="@+id/buttonLogin"
@@ -166,27 +158,10 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="@id/idLinearLayoutButtons"
                     app:layout_constraintStart_toStartOf="@id/idLinearLayoutButtons"
-                    app:layout_constraintTop_toBottomOf="@id/idLinearLayoutButtons">
+                    app:layout_constraintTop_toBottomOf="@id/idLinearLayoutButtons"
+                    android:orientation="horizontal">
 
-                    <TextView
-                        android:id="@+id/tvNewUser2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/hurmegeometricsans4"
-                        android:text="¿No tienes una cuenta?"
-                        android:textSize="16sp" />
 
-                    <TextView
-                        android:id="@+id/tvNewUser"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="8dp"
-                        android:text="Inscribirse"
-                        android:textColor="@color/blue"
-                        android:textStyle="bold"
-                        app:layout_constraintBottom_toBottomOf="@id/tvNewUser2"
-                        app:layout_constraintStart_toEndOf="@id/tvNewUser2"
-                        app:layout_constraintTop_toTopOf="@id/tvNewUser2" />
                 </LinearLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
