--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,16 +89,15 @@
 
                     <EditText
                         android:id="@+id/editTextPassword"
-                        android:layout_width="3dp"
+                        android:layout_width="match_parent"
                         android:layout_height="30dp"
                         android:background="@drawable/editext_background"
                         android:drawableStart="@drawable/lock_24"
                         android:drawablePadding="20dp"
                         android:ems="10"
-                        android:inputType="textPassword"
-                        app:layout_constraintEnd_toStartOf="@+id/btnShowPassword"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        android:inputType="textPassword" />
+
+
 
                     <ImageButton
                         android:id="@+id/btnShowPassword"
